--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "cat header.txt dist/* > ~/Library/Application\\ Support/xbar/plugins/jira.2h.js && chmod +x ~/Library/Application\\ Support/xbar/plugins/jira.2h.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node-fetch": "^2.5.10",
+    "ts-loader": "^9.0.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "bitbar": "^1.3.1",
+    "node-fetch": "^2.6.1"
+  }
 }
