--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "postbuild": "npm run finalize",
+    "build:watch": "webpack -w",
+    "finalize": "cat header.txt lib/main.js > ./dist/jira.2h.js",
+    "dev:finalize": "nodemon -w lib/main.js -x npm run finalize",
+    "dev:prepare": "mkdir -p dist && touch ./dist/jira.2h.js && ln -s `pwd`/dist/jira.2h.js ~/Library/Application\\ Support/xbar/plugins/test-jira.2h.js && chmod +x ~/Library/Application\\ Support/xbar/plugins/test-jira.2h.js",
+    "dev": "npm-run-all -p build:watch dev:finalize",
     "predeploy": "npm run build",
-    "deploy": "cat header.txt dist/* > ~/Library/Application\\ Support/xbar/plugins/jira.2h.js && chmod +x ~/Library/Application\\ Support/xbar/plugins/jira.2h.js"
+    "deploy": "chmod +x ./dist/jira.2h.js && cp ./dist/jira.2h.js ~/Library/Application\\ Support/xbar/plugins/test-jira.2h.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node-fetch": "^2.5.10",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-concat-files-plugin": "^0.5.2",
+    "webpack-merge-and-include-globally": "^2.3.4"
   },
   "dependencies": {
     "bitbar": "^1.3.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1"
   }
 }
