--- a/package.json
+++ b/package.json
@@ -18,20 +18,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
-    "@types/node-fetch": "^2.5.10",
+    "@types/node": "^15.0.2",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-concat-files-plugin": "^0.5.2",
-    "webpack-merge-and-include-globally": "^2.3.4"
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
-    "bitbar": "^1.3.1",
-    "lodash": "^4.17.21",
-    "node-fetch": "^2.6.1"
+    "bitbar": "^1.3.1"
   }
 }
